--- a/style.css
+++ b/style.css
@@ -1,29 +1,41 @@
 *{
     box-sizing: border-box;
+    background-color: antiquewhite;
 }
-.h-1{
+.container{
+    padding: 70px 0px;
     text-align: center;
-    margin-top: 200px;
+    margin: 100px 0px;
+    background-color: antiquewhite;
 }
-li{
-    display: inline-block;
-    margin: 25px;
+h1{
+    background-color: antiquewhite;
 }
 ul{
-    text-align: center;
+    display: inline-block;
+    list-style: none;
+    padding: 20px;
+    background-color: antiquewhite;
 }
-a{
-    text-decoration: none;
-    color: black
-}
-button{
-    border: 2px solid skyblue;
-    padding: 18px;
+li{
+    display: inline;
     background-color: white;
-    border-radius: 60px;
 }
-button:hover{
-    border: 2px solid rebeccapurple;
+.a-1{
+    font-family: verdana, "san-serif";
+    font-size: 16px;
+    border: 2px solid rebeccapurple ;
+    border-radius: 10%;
+    padding: 5px;
+    color: black;
+    text-decoration: none;
+    background-color: white;
+    margin: 30px;
+    
+}
+.a-1:hover{
+
+    font-size: 20px;
+    font-family: verdana, "san-serif";    color: white;
     background-color: rebeccapurple;
-    color: white;
 }
